Cleanup, solve scrollbar issue and contact card css

--- a/src/components/ContactCard/ContactCard.css
+++ b/src/components/ContactCard/ContactCard.css
@@ -8,7 +8,7 @@
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
     max-width: 60%;
     width: 100%;
-    max-height: 40%;
+    max-height: 30%;
     height: 100%;
     margin: 0 auto;
 }
@@ -17,7 +17,10 @@
     width: 300px;
     height: 300px;
     margin-left: 30px;
+    border-radius: 50%;
+    object-fit: cover;
 }
+
 
 .contact-divider {
     width: 2px;
@@ -32,7 +35,7 @@
     align-items: flex-start;
 }
 
-.contact-social h2{
+.contact-social h2 {
     text-decoration: none;
     color: #333;
     display: flex;
@@ -54,6 +57,7 @@
 }
 
 @media (max-width: 1000px) {
+
     .contact-photo,
     .contact-divider {
         display: none;
