--- a/src/pages/CatWatcher/CatWatcher.css
+++ b/src/pages/CatWatcher/CatWatcher.css
@@ -56,28 +56,8 @@
 
 .controls {
     display: flex;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: center;
-    margin-left: 20px;
-}
-
-.horizontal-elements {
-    display: flex;
-    align-items: center;
-    margin-right: 20px;
-    margin-top: 20px;
-}
-
-.camera-group {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-bottom: 20px;
-}
-
-.button-group {
-    display: flex;
-    gap: 10px;
 }
 
 .container {
@@ -88,8 +68,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
-  }
-  
-  .pagination button {
+}
+
+.pagination button {
     margin-right: 10px;
-  }
+}
