--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -1,88 +1,53 @@
-body {
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-  }
-  
-.home {
-    font-family: "Lucida Console", serif;
-    color: white;
-    display: flex;
-    flex-direction: column;
-    height: 100vh;
-    overflow: hidden;
-    transition: background-color 0.5s ease-in-out;
-}
+ .home {
+     font-family: "Lucida Console", serif;
+     color: white;
+     display: flex;
+     flex-direction: column;
+     height: 100vh;
+     overflow: hidden;
+     transition: background-color 0.5s ease-in-out;
+ }
 
-.section {
-    min-height: 100vh;
-    min-width: 100vw;
-    scroll-snap-align: start;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
-}
+ .section {
+     min-height: 100vh;
+     min-width: 100vw;
+     scroll-snap-align: start;
+     display: flex;
+     flex-direction: column;
+     justify-content: flex-start;
+     align-items: center;
+ }
 
-.type-animation {
-    font-size: 24px;
-}
+ .type-animation {
+     font-size: 24px;
+ }
 
-.type-animation-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
-}
+ .type-animation-container {
+     display: flex;
+     flex-direction: column;
+     justify-content: center;
+     align-items: center;
+     height: 100%;
+ }
 
-.contact-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
-}
+ .contact-container {
+     display: flex;
+     justify-content: center;
+     align-items: center;
+     height: 100%;
+ }
 
-.projects-container {
-    margin-top: 50px;
-    /* background-image: url('../../../public/placeHolder.png'); */
-    background-size: cover;
-    background-repeat: no-repeat;
-}
+ .projects-container {
+     margin-top: 50px;
+     /* background-image: url('../../../public/placeHolder.png'); */
+     background-size: cover;
+     background-repeat: no-repeat;
+ }
 
-.carousel-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
-    height: 100%;
-}
-
-.scrollbar {
-    position: fixed;
-    right: 10px;
-    top: 0;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    z-index: 1000;
-}
-
-.scrollbar-item {
-    width: 10px;
-    height: 30px;
-    background-color: #ccc;
-    margin-bottom: 10px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-}
-
-.scrollbar-item.active {
-    background-color: #88e3c8;
-}
-
-.scrollbar-item.active:nth-child(2) {
-    background-color: #eee190;
-}
+ .carousel-container {
+     display: flex;
+     flex-direction: column;
+     justify-content: flex-start;
+     align-items: center;
+     height: 100%;
+ }
